@@ -3,6 +3,7 @@ ZEsarUX 11.1 - xxxx edition. 06 Junio 2024
 
 * Mejoras:
 
+Agregadas máquinas Czerweny CZ 1000, CZ 1500, CZ 1000 Plus, CZ 1500 Plus, CZ 2000, CZ Spectrum, CZ Spectrum Plus
 Permitir hotswap a Pentagon y a Spectrum +3
 Mejorar aviso de Azimuth en ventana External Audio Source
 Permitir no guardar snapshot al salir de ZEsarUX
