@@ -8,6 +8,7 @@
     * Sinclair QL
     * Cambridge Z88
     * Microdigital TK80, TK82, TK82C, TK83, TK85, TK90X (Portuguese and Spanish), TK95 (Portuguese and Spanish)
+    * Czerweny CZ 1000, CZ 1500, CZ 1000 Plus, CZ 1500 Plus, CZ 2000, CZ Spectrum, CZ Spectrum Plus
     * Timex Sinclair 1000, 1500, 2068
     * Timex Computer 2048, 2068
     * Inves Spectrum +
