@@ -374,3 +374,14 @@ el resto puede salir fuera -> comprobar al hacer print y putpixel que no sale fu
 
 --- Fin Documentar ---
 
+
+
+máquinas CZerweny
+
+CZ 1000 - Relabeled Timex Sinclair 1000 (ZX81 clone with 2KB RAM).[6][7][8]
+CZ 1500 - Relabeled Timex Sinclair 1500 (ZX81 clone with 16KB RAM).[9][10][8]
+CZ 2000 - Uses a black version of the CZ 1500 case, with a ZX Spectrum rainbow logo added (ZX Spectrum clone).[11][12]
+CZ 1000 Plus - A CZ 1000 in a similar case to the ZX Spectrum with rubber keys, adding two joystick ports, composite monitor out and a reset button.[13][14][8][3]
+CZ 1500 Plus - A CZ 1500 with the same improvements as the CZ 1000 Plus.[15][8]
+CZ Spectrum - A CZ 2000 with the same improvements as the CZ 1000 Plus in a larger box.[16][17]
+CZ Spectrum Plus - A Sinclair ZX Spectrum clone in a Spectrum+ box, with added joystick ports, composite monitor out, a reset button and Sinclair BASIC messages were translated into Spanish.[18][19]
